tests/ui/suggestions/try-operator-dont-suggest-semicolon.stderr
error[E0308]: mismatched types
  --> $DIR/try-operator-dont-suggest-semicolon.rs:6:9
   |
LL |         b()
   |         ^^^ expected `()`, found `i32`
   |
help: consider using a semicolon here
   |
LL |         b();
   |            +

error[E0308]: mismatched types
  --> $DIR/try-operator-dont-suggest-semicolon.rs:16:9
   |
LL | /     if true {
LL | |
LL | |         x?
   | |         ^^ expected `()`, found integer
LL | |
LL | |
LL | |
LL | |     }
   | |_____- expected this to be `()`
   |
help: consider using a semicolon here
   |
LL |         x?;
   |           +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
